Opened 17 years ago

Closed 17 years ago

Last modified 17 years ago

#1683 closed bug (fixed)

r23142 broke booting

Reported by: ekdahl Owned by: axeld
Priority: normal Milestone: R1
Component: Drivers/Disk Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: x86

Description

Since hrev23142 I get the message: PANIC: did not find any boot partitions! The machine booted fine before that revision. I have a sata hdd and nforce motherboard which is using the legacy_sata driver.

Attachments (3)

bt.JPG (480.1 KB ) - added by ekdahl 17 years ago.
Backtrace
bt-r23199.JPG (434.2 KB ) - added by ekdahl 17 years ago.
during boot r23199.jpg (477.8 KB ) - added by ekdahl 17 years ago.

Download all attachments as: .zip

Change History (10)

by ekdahl, 17 years ago

Attachment: bt.JPG added

Backtrace

comment:1 by mmlr, 17 years ago

I have investigated that with my own driver and have checked in a possible fix for legacy_sata in hrev23199. Could you please check if that helps?

in reply to:  1 comment:2 by ekdahl, 17 years ago

Replying to mmlr:

I have investigated that with my own driver and have checked in a possible fix for legacy_sata in hrev23199. Could you please check if that helps?

It still says "PANIC: did not find any boot partitions!", but it behaves differently. It now takes several minutes before it gets to that point (it pauses at several places during boot). Before hrev23199 that happened quickly.

by ekdahl, 17 years ago

Attachment: bt-r23199.JPG added

by ekdahl, 17 years ago

Attachment: during boot r23199.jpg added

comment:3 by mmlr, 17 years ago

From the screenshots it seems that it at least detects the drive now. The timeouts may suggest a problem with DMA transfers. I have checked in hrev23200 to also clear the PCI_address_space bit of the bus_master_base, which could just help here. Otherwise you could try booting with disabling DMA in the safe mode options and see if that makes a difference.

in reply to:  3 comment:4 by ekdahl, 17 years ago

It now boots fine. Thank you for the quick fixes! I didn't need to disable DMA.

comment:5 by mmlr, 17 years ago

Resolution: fixed
Status: newclosed

Great, thanks for verifying!

comment:6 by marcusoverhagen, 17 years ago

Can you please test if hrev23207 is still working? Thanks!

comment:7 by ekdahl, 17 years ago

Yes, it still works.

Note: See TracTickets for help on using tickets.