Since r23142 the ide_adapter does not clear the PCI_address_space bit when detecting a channel. Drivers that use the ide_adapter therefore have to do that themselfs, which broke legacy_sata (probably this is also the case for the promise_tx2 driver). I investigated this as it broke my attempt of a it8211 driver too. This might fix bug #1683 but I cannot test that. Also cleaned out some space indent in that file.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23199 a95241bf-73f2-0310-859d-f6bbb57e9c96